--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      Digital Marketing Experts
+                      Digital Marketing Expert
                     </h1>
                     <p>
                       Aenean scelerisque felis ut orci condimentum laoreet. Integer nisi nisl, convallis et augue sit amet, lobortis semper quam.
